# ghidra-rest-client-python

./: .gitignore  README.MD  pyproject.toml
src/ghidra_rest_client/: client.py  util.py
src/ghidra_rest_client/model/: address_space.py  api_responses.py  bookmark.py  common.py  function.py  memory_block.py  relocation.py  symbol.py  type.py
